[tool.poetry]
name = "forbidden-fruit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
spectral-inference-zoo = { git = "git@github.com:enveda/spectral-inference-zoo.git" }
ipycytoscape = "^1.3.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
